[package]
edition = "2021"
name = "sub_account_reconcile_system"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
calamine = "0.18"
encoding = "0.2.33"
serde = {version = "1", features = ["derive"]}
simple_excel_writer = "0.2.0"
thiserror = "1.0.30"
